# Sistema-de-busca-inteligente-para-estoque-de-autopecas

./: README.md  app.py  produtos_autopecas.db  pyproject.toml  search_engine.py  seed_db.py  setup_db.py  sync_to_es.py
