[project]
name = "busca-hibrida"
version = "0.1.0"
description = ""
authors = [
    {name = "aram",email = "xboxaramxbox@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "pandas (<3.0.0)",
    "pysqlite3 (>=0.6.0,<0.7.0)",
    "elasticsearch (==8.12.0)"
]

[tool.poetry]
packages = [{include = "busca_hibrida", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
